# quac

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yaml  deploy-docs.yaml  mypy.yaml  tests.yaml
docs/: index.md
docs/api/: attributions.md  evaluation.md  generate.md
docs/source/: about.md  conf.py  examples.md  examples.rst  glossary.md  index.md  index.rst  install.md  install.rst  mkdocs.yml  tutorials.md  tutorials.rst
docs/source/_static/css/: custom.css
docs/source/api/: attributions.md  evaluation.md  generate.md
docs/source/stylesheets/: extra.css
docs/source/tutorials/: attribute.md  attribute.rst  classifier.md  data.md  evaluate.md  evaluate.rst  generate.md  generate.rst  train.rst  train_yaml.md  train_yaml.rst  visualize.md  visualize.rst
docs/stylesheets/: extra.css
docs/tutorials/: attribute.md  generate.md  train.md
example_experiment/: config.yaml  generate_images.py  run_attribution.py  run_evaluation.py  train_stargan.py
experiments/disc_a/: 00_jit_checkpoint.py  01_split_dataset.py  04_run_attribution.py  05_run_evaluation.py  06_plot_eval.py  07_plot_attribution_examples.py
experiments/disc_a/configs/: stargan.yml
experiments/disc_b/: 00_jit_checkpoint.py  01_split_dataset.py  02_train_stargan.py  03_generate_images.py  04_run_attribution.py  05_run_evaluation.py  06_plot_eval.py  07_plot_attribution_examples.py
experiments/disc_b/configs/: stargan.yml
experiments/horses_zebras/: 00_jit_checkpoint.py  01_split_dataset.py  04_run_attribution.py  scratch.py
experiments/horses_zebras/configs/: stargan.yml
experiments/summer_winter/: 00_jit_checkpoint.py  01_split_dataset.py  03_generate_images.py
experiments/summer_winter/configs/: stargan.yml
src/quac/: __init__.py  attribution.py  config.py  data.py  evaluation.py  explanation.py  generate.py  report.py
src/quac/generate/: __init__.py  data.py  model.py
src/quac/training/: checkpoint.py  classification.py  config.py  data_loader.py  eval.py  logging.py  solver.py  stargan.py  utils.py
tests/: test_classifier_wrapper.py  test_config.py  test_datasets.py  test_evaluation.py  test_explanation.py  test_io.py  test_model.py  test_report.py
