[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "quac"
description = "Quantitative Attribution with Counterfactuals"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "funkej@hhmi.org", name = "Funke Lab" },
]
dynamic = ["version"]
dependencies = [
  "captum",
  "numpy", 
  "torch", 
  "torchvision",
  "funlib.learn.torch@git+https://github.com/funkelab/funlib.learn.torch",
  "opencv-python",
  "scipy"
]

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'mypy',
  'pdoc',
  'pre-commit',
]

[project.urls]
homepage = "https://github.com/funkelab/quac"
repository = "https://github.com/funkelab/quac"
