[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "quac"
description = "Quantitative Attribution with Counterfactuals"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
  { name = "Diane Adjavon", email = "adjavond@hhmi.org" },
  { name = "Jan Funke", email = "funkej@hhmi.org" },
]
dynamic = ["version"]
dependencies = [
  "captum",
  "numpy",
  "munch",
  "torch",
  "torchvision",
  "funlib.learn.torch@git+https://github.com/funkelab/funlib.learn.torch",
  "opencv-python",
  "pydantic",
  "scipy",
  "scikit-learn",
  "imageio>=2.37.0,<3",
  "scikit-image>=0.24.0,<0.25",
  "pandas>=2.2.3,<3",
]

[project.optional-dependencies]
dev = ['pytest', 'black', 'mypy', 'pdoc', 'pre-commit']
docs = [
  "ipykernel",
  "jupyter_sphinx",
  "sphinx_autodoc_typehints",
  "sphinx_rtd_theme",
  "furo",
  "sphinx_togglebutton",
  "sphinxcontrib_jquery",
  "sphinxcontrib-email",
  "sphinx>6",
  "tomli",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-design",
]

[project.urls]
homepage = "https://funkelab.github.io/quac/"
repository = "https://github.com/funkelab/quac"

[tool.pixi.project]
channels = ["nvidia/label/cuda-11.8.0", "nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
cuda = { version = "*", channel = "nvidia/label/cuda-11.8.0" }
mkl = { version = "<2024.0.0" }
pytorch = { version = "2.0.1.*", channel = "pytorch" }
torchvision = { version = "0.15.2.*", channel = "pytorch" }
pytorch-cuda = { version = "11.8.*", channel = "pytorch" }

[tool.pixi.pypi-dependencies]
quac = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
